[package]
name = "rusty_bee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
## protobufs / libp2p
libp2p = { version = "0.54.0", git = "https://github.com/libp2p/rust-libp2p", features = [
    "tokio",
    "autonat",
    "dns",
    "kad",
    "tcp",
    "ping",
    "noise",
    "yamux",
    "ecdsa",
    "identify",
    "macros"
] }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p" }
#alloy-primitives = "0.7.6"
#alloy-signer = "0.1.2"
#alloy-signer-wallet = "0.0.0-reserved"
#libp2p-stream = "0.1.0-alpha.1"

## Misc
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
rand = "0.8.5"
prost = "0.12.6"
once_cell = "1.19.0"
prost-types = "0.12.6"
thiserror = "1.0.61"
eyre = "0.6.12"
futures = "0.3.30"

## alloy
alloy-primitives = "0.7.6"
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }

## Local
handshake = { path = "src/protocols/handshake" }


[build-dependencies]
prost-build = "0.12.6"