[package]
name = "rusty_bee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "src/protocols/handshake"
]

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
## protobufs / libp2p
libp2p = { version = "0.54.0", git = "https://github.com/libp2p/rust-libp2p", features = [
    "tokio",
    "autonat",
    "dns",
    "kad",
    "tcp",
    "ping",
    "noise",
    "yamux",
    "ecdsa",
    "identify",
    "macros"
] }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p" }
prost = "0.12.6"
prost-types = "0.12.6"

## Misc
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi", "fmt", "std", "json", "time"] }
tracing = "0.1.40"
rand = "0.8.5"
once_cell = "1.19.0"
thiserror = "1.0.61"
eyre = "0.6.12"
futures = "0.3.30"
tracing-appender = "0.2"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

hex = "0.4.3"
humantime = "2.1"
humantime-serde = "1.1"


## alloy
alloy-primitives = "0.7.6"
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "00d81d7", default-features = false }

## Local
handshake = { path = "src/protocols/handshake" }


[build-dependencies]
prost-build = "0.12.6"
